--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -1,5 +1,23 @@
 <%- include("partials/header.ejs") %>
-<h2>Welcome, B2B customer!</h2>
-<h3>Place your orders below</h3>
+<div id="title">
+  <h2>Hello, Ban Seng & Sons Workshop Pte Ltd!</h2>
+  <h3>Please place your orders below</h3>
+</div>
+
+<div class="product-container">
+  <% for (let product of productsController) { %>
+  <div class="col-1 product">
+    <a class="product-link" href="/products/<%= product.id %>">
+      <div class="image-container">
+        <img class="product-image" width="180" src="<%=product.img%>" />
+      </div>
+      <p>
+        <%= product.name %><br />$<%=product.price %> each<br /><%if(product.qty>0){%>
+        <%=product.qty%> pcs left <%}else{%> SOLD OUT <%}%>
+      </p></a
+    >
+  </div>
+  <% } %>
+</div>
 
 <%- include("partials/footer.ejs") %>
