--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <footer class="footer mt-auto py-3 bg-light fixed-bottom">
     <div class="container">
-      <span class="text-muted">Copyright 2021 - The Widget Company</span>
+      <span class="text-muted">Copyright 2021 - Bukit Timah Auto & Cycle Supplies Pte Ltd</span>
     </div>
   </footer>
   <script src="/bootstrap/js/bootstrap.min.js"></script>
