--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,9 +1,25 @@
 <html>
   <head>
-    <title>B2B Portal</title>
+    <title>Bukit Timah Auto & Cycle Spare Parts Company</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/styles.css" />
   </head>
-  <body>
-    <h1>Welcome to the Widgets B2B Portal</h1>
+  <body style="padding-bottom: 100px" text-align="center">
+    <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
+      <header class="mb-auto">
+        <div>
+          <h3 class="float-md-start mb-0">
+            🛠️ Bukit Timah Auto & Cycle Supplies Pte Ltd
+          </h3>
+          <nav class="nav nav-masthead justify-content-center float-md-end">
+            <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link" href="/addproducts">Add Products</a>
+          </nav>
+        </div>
+      </header>
+      <div class="px-4 py-5 my-5 text-center">
+        <h1 class="mongoose-header">⚙️ Welcome to the B2B Portal ⚙️</h1>
+      </div>
+    </div>
   </body>
 </html>
