--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
           </h3>
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/addproducts">Add Products</a>
+            <a class="nav-link" href="/products/add">Add Products</a>
           </nav>
         </div>
       </header>
