--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -8,9 +8,11 @@
     <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
       <header class="mb-auto">
         <div>
-          <h3 class="float-md-start mb-0">
-            🛠️ Bukit Timah Auto & Cycle Supplies Pte Ltd
-          </h3>
+          <a class="nav-link" href="/"
+            ><h3 class="float-md-start mb-0">
+              🛠️ Bukit Timah Auto & Cycle Supplies Pte Ltd
+            </h3></a
+          >
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/products/add">Add Products</a>
