--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -16,6 +16,13 @@
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
             <a class="nav-link" href="/products/add">Add Products</a>
+            <a class="nav-link" href="/users/signup">Sign up</a>
+            <% if (username) { %><a class="nav-link" href="/users/logout"
+              >Logout</a
+            >
+            <% } else { %>
+            <a class="nav-link" href="/users/login">Login</a>
+            <% } %>
           </nav>
         </div>
       </header>
