--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -15,12 +15,19 @@
           >
           <nav class="nav nav-masthead justify-content-center float-md-end">
             <a class="nav-link active" aria-current="page" href="/">Home</a>
+            <a class="nav-link active" aria-current="page" href="/contact"
+              >Contact Us</a
+            >
+            <% if (role==="admin") {%>
+
             <a class="nav-link" href="/products/add">Add Products</a>
-            <a class="nav-link" href="/users/signup">Sign up</a>
-            <% if (username) { %><a class="nav-link" href="/users/logout"
+            <% } %> <% if (username) { %><a
+              class="nav-link"
+              href="/users/logout"
               >Logout</a
             >
             <% } else { %>
+            <a class="nav-link" href="/users/signup">Sign up</a>
             <a class="nav-link" href="/users/login">Login</a>
             <% } %>
           </nav>
