--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,9 @@
     <title>Bukit Timah Auto & Cycle Spare Parts Company</title>
     <link rel="stylesheet" href="/bootstrap/css/bootstrap.min.css" />
     <link rel="stylesheet" href="/styles.css" />
+    <style>
+      @import url("https://fonts.googleapis.com/css2?family=Electrolize&display=swap");
+    </style>
   </head>
   <body style="padding-bottom: 100px" text-align="center">
     <div class="cover-container d-flex w-100 p-3 mx-auto flex-column">
