--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -1,5 +1,5 @@
-<footer class="footer mt-auto py-3 bg-light fixed-bottom">
-    <div class="container">
+<footer class="footer mt-auto py-3 bg-dark fixed-bottom">
+    <div class="container footer-container">
       <span class="text-muted">Copyright 2021 - Bukit Timah Auto & Cycle Supplies Pte Ltd</span>
     </div>
   </footer>
