middleware as js file

--- a/public/styles.css
+++ b/public/styles.css
@@ -59,11 +59,15 @@ a:visited {
 }
 
 a:hover {
-  color: red;
+  color: blue;
 }
 
 .alert {
   margin: 20 auto;
   text-align: center;
   width: 500;
+}
+
+.body-link {
+  text-decoration: underline;
 }
