--- a/views/login.ejs
+++ b/views/login.ejs
@@ -13,6 +13,9 @@
     <div>
       <input type="submit" class="btn btn-primary mb-3" value="Login" />
     </div>
+    <div>
+      <p>Don't have an account? Sign up <a class="body-link" href="/users/signup">here</a></p>
+    </div>
   </form>
 </div>
 <%- include("partials/footer.ejs") %>
