added signu and login link to hp

--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -26,8 +26,11 @@
     </div>
 
     <%}else{%>
-    <h4>Please log in to proceed</h4>
-    <h6>If you don't have an account yet, please sign up first</h6>
+    <h4>Please <a href="/users/login">log in</a> to proceed</h4>
+    <h6>
+      If you don't have an account yet, please
+      <a href="/users/signup">sign up</a> first
+    </h6>
     <%}%>
   </div>
 </div>
