--- a/views/show.ejs
+++ b/views/show.ejs
@@ -38,7 +38,7 @@
         <% if(product.qty>0){%>
         <input type="submit" class="btn btn-danger mb-3" value="BUY NOW" />
         <% } else { %>
-        <h4>SOLD OUT</h4>
+        <h4 class="sold-out">SOLD OUT</h4>
         <% } %>
       </div>
     </form>
