--- a/views/homepage.ejs
+++ b/views/homepage.ejs
@@ -16,20 +16,21 @@
           <div class="image-container">
             <img class="product-image" width="180" src="<%=product.img%>" />
           </div>
-          <p>
-            <%= product.name %><br />$<%=product.price %> each<br /><%if(product.qty>0){%>
-            <%=product.qty%> pcs left <%}else{%> SOLD OUT <%}%>
-          </p></a
+          <p><%= product.name %><br />$<%=product.price %> each</p>
+          <%if(product.qty>0){%>
+          <p><%=product.qty%> pcs left</p>
+          <%}else{%>
+          <p class="sold-out">SOLD OUT <%}%></p></a
         >
       </div>
       <% } %>
     </div>
 
     <%}else{%>
-    <h4>Please <a href="/users/login">log in</a> to proceed</h4>
+    <h4>Please <a class="hp-link" href="/users/login">LOG IN</a> to proceed</h4>
     <h6>
       If you don't have an account yet, please
-      <a href="/users/signup">sign up</a> first
+      <a class="hp-link" href="/users/signup">SIGN UP</a> first
     </h6>
     <%}%>
   </div>
