--- a/views/partials/alert.ejs
+++ b/views/partials/alert.ejs
@@ -2,12 +2,42 @@
 <div class="row">
   <% if (action === "create") { %>
   <div class="alert alert-success" role="alert">Product successfully added</div>
+
   <% } else if (action === "update") { %>
-  <div class="alert alert-info" role="alert">Product successfully updated</div>
+  <div class="alert alert-success" role="alert">
+    Product successfully updated
+  </div>
+
+  <% } else if (action === "signup") { %>
+  <div class="alert alert-success" role="alert">
+    Signup successful! Please log in
+  </div>
+
+  <% } else if (action === "logout") { %>
+  <div class="alert alert-success" role="alert">
+    You have successfully logged out
+  </div>
+
   <% } else if (action === "delete") { %>
   <div class="alert alert-danger" role="alert">
     Product successfully deleted
   </div>
+
+  <% } else if (action === "usernametaken") { %>
+  <div class="alert alert-danger" role="alert">
+    User name already exists! Choose another one
+  </div>
+
+  <% } else if (action === "nousername") { %>
+  <div class="alert alert-danger" role="alert">
+    User name does not exist! Please try again
+  </div>
+
+  <% } else if (action === "wrongpassword") { %>
+  <div class="alert alert-danger" role="alert">
+    Wrong password! Please try again
+  </div>
+
   <% } else if (action === "forbidden") { %>
   <div class="alert alert-danger" role="alert">⚠️ Admins Only ⚠️</div>
   <% } %>
