--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,4 @@
-<%- include("partials/header.ejs") %>
+<%- include("partials/header.ejs") %> <%- include("partials/alert.ejs") %>
 <div class="container">
   <h2>Sign up</h2>
   <form method="POST" action="/users/signup">
